Fixed aside sponsors not showing in desktop

--- a/scss/_992.scss
+++ b/scss/_992.scss
@@ -16,6 +16,13 @@
 	margin: 0 auto;	
 }
 
+aside.right {
+	display: block;
+	width: 300px;
+	float:right;
+	margin-top:35px;
+}
+
 aside.bottom{
 	display:none;
 }
